--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,21 @@
-@import "../node_modules/ol/ol.css";
-
 html,
 body {
   margin: 0;
   height: 100%;
 }
 
-#map {
+#container {
+  display: flex;
+  flex-direction: row;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   width: 100%;
   background-color: rgb(11, 23, 75);
+}
+
+#container > * {
+  height: 100%;
+  width: 100%;
 }
